Closed Bug 353672 Opened 18 years ago Closed 18 years ago

upload control fails to update filename/mediatype for 1.8.0 branch

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sspeiche, Unassigned)

References

Details

(Keywords: fixed1.8.0.8, fixed1.8.1.1)

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060816 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060816 Minefield/3.0a1

See bug 353159 for original bug.

Note, have discovered another minor problem with this, namely wrt to submission and usage in multipart/related.

Reproducible: Always
Verified against trunk, note this fixed additional problems in nsXFormsSubmissionElement.cpp that bug 353159 failed to catch (my bad, Aaron tried to point me there)
Attachment #239593 - Flags: review?(aaronr)
Comment on attachment 239593 [details] [diff] [review]
patch for 1.8.0 +

I verified that this patch works on 1.8.0 branch
Attachment #239593 - Flags: review?(aaronr) → review+
Comment on attachment 239593 [details] [diff] [review]
patch for 1.8.0 +

For good form, could give me a r? please?
Attachment #239593 - Flags: review?(Olli.Pettay)
Attachment #239593 - Flags: review?(Olli.Pettay) → review+
really need this
Blocks: 334603
checked into trunk for sspeiche
Status: UNCONFIRMED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8.0 on 2006/09/27
Keywords: fixed1.8.0.8
checked into 1.8 branch on 2006/11/21
Keywords: fixed1.8.1.1
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: