[XForms] upload control fails to update filename/mediatype (1.8.0 safe version). Bug 353672, r=olli+aaronr